...
import com.adielcalixto.ifacademico.presentation.UiText

data class TopLevelRoute<T : Any>(val name: String, val route: T, val icon: ImageVector)

@Composable
fun getTopLevelRoutes() = listOf(
    TopLevelRoute("Dashboard", Screen.Dashboard, Icons.Filled.Home),
    TopLevelRoute(
        UiText.StringResource(R.string.diaries).asString(),
        Screen.DiaryList,
        Icons.Filled.Book
    ),
    TopLevelRoute(
...
